--- a/index_list.htm
+++ b/index_list.htm
@@ -129,7 +129,7 @@
                 </thead>
                 <tbody>
                     <td></td>
-                    <td>(服務案)讀者問題回覆管理</td>
+                    <td>(服務)讀者問題回覆管理</td>
                     <td>
                         <ul>
                             <li>讀者問題回覆管理 <a href="tpmlwebref_questionsearch.htm" target="_blank"></a></li>
@@ -138,16 +138,16 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>(服務案)客服留言清單</td>
+                        <td>(服務)客服留言清單</td>
                         <td>
                             <ul>
-                                <li>公版信件管理 <a href="tpmlwebref_emailtemplate.htm" target="_blank"></a></li>
+                                <li>公版信件管理<a href="tpmlwebref_emailtemplate.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
                     <tr>
                         <td></td>
-                        <td>(服務案)客服留言清單</td>
+                        <td>(服務)客服留言清單</td>
                         <td>
                             <ul>
                                 <li>轉介信箱管理 <a href="tpmlwebref_referrals.htm" target="_blank"></a></li>
@@ -156,7 +156,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>(服務案)客服留言清單</td>
+                        <td>(服務)客服留言清單</td>
                         <td>
                             <ul>
                                 <li>問題審核管理 <a href="tpmlwebref_review.htm" target="_blank"></a></li>
@@ -165,7 +165,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>(服務案)客服留言清單</td>
+                        <td>(服務)客服留言清單</td>
                         <td>
                             <ul>
                                 <li>客服管理<a href="tpmlwebref_chat_customer.htm" target="_blank"></a></li>
@@ -174,7 +174,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>(服務案)服務參考統計</td>
+                        <td>(服務)服務參考統計</td>
                         <td>
                             <ul>
                                 <li>服務參考統計 <a href="tpmlwebref_statistics.htm" target="_blank"></a></li>
