--- a/tpmlwebref_statistics.htm
+++ b/tpmlwebref_statistics.htm
@@ -24,7 +24,86 @@
         <!-- header load header.htm -->
         <header></header>
         <!-- aside load aside.htm -->
-        <aside></aside>
+        <aside>
+            <h1>
+                <a href="index.htm">
+                    <img src="images/tpml_logo.png" alt=""><span>北市圖主題網<br>網站管理平台</span>
+                </a>
+            </h1>
+            <a href="#aL" id="aL" title="左方導覽區塊" accesskey="L" class="accesskey" tabindex="1">:::</a>
+            <!-- menu -->
+            <nav style="height:100%;padding-bottom:0;">
+                <!-- level1 -->
+                <ul>
+                    <li>
+                        <a href="index.htm">
+                            <img src="images/icon/icon_home.svg" alt="">
+                            <span>Home</span>
+                        </a>
+                    </li>
+                    <div class="divider">功能清單</div>
+                    <li><a href="#">
+                            <img src="images/iot_icon/setting.svg" alt="">
+                            <span>系統開發</span>
+                        </a>
+                        <ul>
+                            <li><a href="codeList.htm"><span>代碼維護</span></a></li>
+                        </ul>
+                    </li>
+
+                    <li><a href="#">
+                            <img src="images/iot_icon/admingrp2.svg" alt="">
+                            <span>系統管理</span>
+                        </a>
+                        <ul>
+                            <li><a href="ugrpList.htm"><span>權限群組</span></a></li>
+                            <li><a href="userList.htm"><span>使用者管理</span></a></li>
+                            <li><a href="deptEdit.htm"><span>組織架構</span></a></li>
+                            <li><a href="userLogList.htm"><span>登入紀錄查詢</span></a></li>
+                            <li><a href="userUpdate.htm"><span>個人資料檢視</span></a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">
+                            <img src="images/iot_icon/template.svg" alt="">
+                            <span>網站管理</span>
+                        </a>
+                        <ul>
+                            <li><a href="catTreeList.htm"><span>目錄樹管理管理</span></a></li>
+                            <li><a href="card_website.htm"><span>網別管理</span></a></li>
+                            <!--li><a href="card_website.htm"><span>版型管理</span></a></li-->
+                        </ul>
+                    </li>
+                    <li class="li_hasChild">
+                        <a href="#">
+                            <img src="images/iot_icon/document.svg" alt="">
+                            <span>內容管理</span>
+                        </a>
+                        <ul>
+                            <li><a href="data_list_noTree.htm"><span>快速上稿</span></a></li>
+                            <li><a href="data_list.htm"><span>單元上稿</span></a></li>
+                            <li><a href="data_list.htm"><span>資料審稿</span></a></li>
+                            <!--li><a href="media_photo.htm"><span>多媒體資源庫</span></a></li-->
+                        </ul>
+                    </li>
+                    <li><a href="#">
+                            <img src="images/iot_icon/todo.svg" alt="">
+                            <span>客製化功能</span>
+                        </a>
+                        <ul>
+                            <li><a href="tpmlwebref_questionsearch.htm"><span>(服務)讀者問題回覆管理</span></a></li>
+                            <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版信件管理</span></a></li>
+                            <li><a href="tpmlwebref_referrals.htm"><span>(服務)轉介信箱管理</span></a></li>
+                            <li><a href="tpmlwebref_review.htm"><span>(服務)問題審核管理</span></a></li>
+                            <li><a href="tpmlwebref_chat_customer.htm"><span>(服務)客服管理</span></a></li>
+                            <li><a href="tpmlwebref_statistics.htm"><span>(服務)服務參考統計</span></a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+            <!-- 次層抽屜選單 -->
+            <!-- copyright -->
+            <div class="copyright">Copyright 2024 © Hyweb </div>
+        </aside>
         <!-- 主要內容區 -->
         <div class="content">
             <!-- breadcrumb路徑 -->
@@ -857,7 +936,6 @@
     <script src="https://code.highcharts.com/modules/pattern-fill.js"></script>
     <script>
         $('header').load("header.htm");
-        $('aside').load("aside_tpml.htm");
         var _Color = ['#20A4F3', '#54CEC3', '#ffbc08', '#fe7b62', '#00b44b', '#2869b9', '#d84400', '#009e7a', '#2e3c56', '#754a28'];
         // 長條
         Highcharts.chart('axes_line_column1', {
