--- a/index_list.htm
+++ b/index_list.htm
@@ -112,7 +112,7 @@
     <div class="demo_wrap">
         <h1><img src="images/W_logo.png" alt="W CMS Lite"
                 style="max-height:50px;width:auto;vertical-align:middle;margin-right:10px;">
-            <a href="index_list.html">W CMS管理端</a>
+            <a href="index_list.html">管理端</a>
         </h1>
         <div class="btn_grp" style="float:right;">
             <span id="current_time"></span>
