--- a/index_list.htm
+++ b/index_list.htm
@@ -138,7 +138,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>(服務)客服留言清單</td>
+                        <td>(服務)公版信件管理</td>
                         <td>
                             <ul>
                                 <li>公版信件管理<a href="tpmlwebref_emailtemplate.htm" target="_blank"></a></li>
@@ -147,7 +147,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>(服務)客服留言清單</td>
+                        <td>(服務)轉介信箱管理</td>
                         <td>
                             <ul>
                                 <li>轉介信箱管理 <a href="tpmlwebref_referrals.htm" target="_blank"></a></li>
@@ -156,7 +156,7 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>(服務)客服留言清單</td>
+                        <td>(服務)問題審核管理</td>
                         <td>
                             <ul>
                                 <li>問題審核管理 <a href="tpmlwebref_review.htm" target="_blank"></a></li>
