--- a/tpmlwebref_questionsearchnew1.htm
+++ b/tpmlwebref_questionsearchnew1.htm
@@ -162,9 +162,9 @@
                                                         <div class="radio_grp form_inline">
                                                             <label><input name="MenuUse" id="mobileMenuUse" type="radio"
                                                                     value="mobileMenuUse"
-                                                                    checked=""><span>公開</span></label>
+                                                                    checked=""><span>不公開</span></label>
                                                             <label><input name="MenuUse" id="pcMenuUse" type="radio"
-                                                                    value="pcMenuUse"><span>不公開</span></label>
+                                                                    value="pcMenuUse"><span>公開</span></label>
                                                             <div class="btn_grp">
                                                             </div>
                                                         </div>
