--- a/tpmlwebref_emailtemplateedit.htm
+++ b/tpmlwebref_emailtemplateedit.htm
@@ -188,7 +188,7 @@
                                 <!-- 每種不同功能，都用block區分 -->
                                 <div class="block">
                                     <div class="_head">
-                                        <h3>資料狀態</h3>
+                                        <h3>啟用選項</h3>
                                     </div>
                                     <div class="flex-form">
                                         <div class="form_grp">
@@ -210,22 +210,17 @@
                                 </div>
                                 <div class="block">
                                     <div class="_head">
-                                        <h3>發佈選項</h3>
+                                        <h3>最後編修資訊</h3>
                                     </div>
-                                    <div class="block">
-                                        <div class="_head">
-                                            <h3>最後編修資訊</h3>
-                                        </div>
-                                        <div class="log">
-                                            <ul>
-                                                <li>
-                                                    <span><i class="i_man"></i></span>系統管理者(admin)
-                                                </li>
-                                                <li>
-                                                    <span><i class="i_clock"></i></span>2024/11/26 14:26:10
-                                                </li>
-                                            </ul>
-                                        </div>
+                                    <div class="log">
+                                        <ul>
+                                            <li>
+                                                <span><i class="i_man"></i></span>系統管理者(admin)
+                                            </li>
+                                            <li>
+                                                <span><i class="i_clock"></i></span>2024/11/26 14:26:10
+                                            </li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -234,21 +229,22 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- JS-->
-        <script src="js/jquery-3.3.1.min.js"></script>
-        <script src="vendor/jquery.easing.min.js"></script>
-        <!-- template customize js -->
-        <script src="js/customize.js"></script>
-        <!-- highlight -->
-        <script src="vendor/highlight/highlight.pack.js"></script>
-        <!-- tree view -->
-        <script src="vendor/treeview/jquery.treeview.js"></script>
-        <script>
-            // first example
-            $(".treeview .treeview").treeview();
-            $('header').load("header.htm");
-        </script>
+    <!-- JS-->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="vendor/jquery.easing.min.js"></script>
+    <!-- template customize js -->
+    <script src="js/customize.js"></script>
+    <!-- highlight -->
+    <script src="vendor/highlight/highlight.pack.js"></script>
+    <!-- tree view -->
+    <script src="vendor/treeview/jquery.treeview.js"></script>
+    <script>
+        // first example
+        $(".treeview .treeview").treeview();
+        $('header').load("header.htm");
+    </script>
 </body>
 
 </html>
