--- a/tpmlwebref_referrals.htm
+++ b/tpmlwebref_referrals.htm
@@ -179,9 +179,11 @@
                                             </select> 筆 </div>
                                     </form>
                                 </div>
-                                <!--div class="quick_btn">
-                                        <button class="btn btn-orange" onclick="window.print()"><i class="i_check"></i>列印本頁資料</button>
-                                    </div-->
+                                <div class="quick_btn">
+                                    <button class="btn btn-orange"
+                                        onclick="window.location.href='tpmlwebref_emailtemplateedit.htm';"><i
+                                            class="i_add"></i>新增信箱</button>
+                                </div>
                             </div>
                             <div class="_content">
                                 <!-- 表格樣式 -->
