--- a/tpmlwebref_reviewedit.htm
+++ b/tpmlwebref_reviewedit.htm
@@ -294,13 +294,13 @@
                                         <div class="form_grp">
                                             <div class="form_title">狀態<abbr>*</abbr></div>簽核
                                             <div class="form_content">
-
                                             </div>
                                         </div>
                                     </div>
                                     <div class="btn_grp">
-                                        <button class="btn btn-green">不通過</button>
-                                        <button class="btn btn-blue">審核通過</button>
+                                        <button class="btn btn-red">退文</button>
+                                        <button class="btn btn-green">簽核通過</button>
+                                        <button class="btn btn-gray">修改通過</button>
                                     </div>
                                 </div>
                                 <div class="block">
