--- a/tpmlwebref_emailtemplate.htm
+++ b/tpmlwebref_emailtemplate.htm
@@ -250,7 +250,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">10</td>
-                                                    <td><time>各課室1</time></td>
+                                                    <td><time>諮詢服務課1</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -263,7 +263,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">9</td>
-                                                    <td><time>各課室2</time></td>
+                                                    <td><time>諮詢服務課2</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -276,7 +276,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">8</td>
-                                                    <td><time>各課室3</time></td>
+                                                    <td><time>諮詢服務課3</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -289,7 +289,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">7</td>
-                                                    <td><time>各課室4</time></td>
+                                                    <td><time>諮詢服務課4</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
@@ -302,7 +302,7 @@
                                                 <tr>
                                                     <td><input type="checkbox"></td>
                                                     <td class="num">6</td>
-                                                    <td><time>各課室5</time></td>
+                                                    <td><time>諮詢服務課5</time></td>
                                                     <td><span class="blue">啟用中</span></td>
                                                     <td data-title="留言日期"><time>2024/6/24 09:20</time></td>
                                                     <td>
