--- a/tpmlwebref_emailtemplateedit.htm
+++ b/tpmlwebref_emailtemplateedit.htm
@@ -140,7 +140,7 @@
                                                 <select id="" name="" class="dynamicCol used">
                                                     <option value="" selected="" disabled="disabled">
                                                     </option>
-                                                    <option value="1" selected>各課室</option>
+                                                    <option value="1" selected>諮詢服務課</option>
                                                     <option value="2">讀者</option>
                                                 </select>
                                                 <label>類別<abbr>*</abbr></label>
