--- a/tpmlwebref_emailtemplateedit.htm
+++ b/tpmlwebref_emailtemplateedit.htm
@@ -91,7 +91,7 @@
                         </a>
                         <ul>
                             <li><a href="tpmlwebref_questionsearch.htm"><span>(服務)讀者問題回覆管理</span></a></li>
-                            <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版信件管理</span></a></li>
+                            <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版回覆管理</span></a></li>
                             <li><a href="tpmlwebref_referrals.htm"><span>(服務)轉介信箱管理</span></a></li>
                             <li><a href="tpmlwebref_review.htm"><span>(服務)問題審核管理</span></a></li>
                             <li><a href="tpmlwebref_chat_customer.htm"><span>(服務)客服管理</span></a></li>
@@ -118,7 +118,7 @@
             <div class="grid">
                 <div class="container">
                     <div class="title">
-                        <h2>公版信件編輯</h2>
+                        <h2>公版回覆編輯</h2>
                         <div class="function">
                             <ul>
                                 <li class="icon_back"><a href="tpmlwebref_emailtemplate.htm">回上一頁</a></li>
@@ -131,7 +131,7 @@
                             <!-- 中央區塊 -->
                             <div class="content_block">
                                 <div class="_head">
-                                    <h3>公版信件編輯</h3>
+                                    <h3>公版回覆編輯</h3>
                                 </div>
                                 <div class="_content">
                                     <div class="flex-form">
