--- a/index_list.htm
+++ b/index_list.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>後台UI清單</title>
+    <title>W CMS 專案用後台UI清單</title>
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -112,7 +112,7 @@
     <div class="demo_wrap">
         <h1><img src="images/W_logo.png" alt="W CMS Lite"
                 style="max-height:50px;width:auto;vertical-align:middle;margin-right:10px;">
-            <a href="index_list.html">管理端</a>
+            <a href="index_list.html">W CMS管理端</a>
         </h1>
         <div class="btn_grp" style="float:right;">
             <span id="current_time"></span>
@@ -138,10 +138,10 @@
                     </tr>
                     <tr>
                         <td></td>
-                        <td>(服務)公版信件管理</td>
+                        <td>(服務)公版回覆管理</td>
                         <td>
                             <ul>
-                                <li>公版信件管理<a href="tpmlwebref_emailtemplate.htm" target="_blank"></a></li>
+                                <li>公版回覆管理<a href="tpmlwebref_emailtemplate.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
@@ -150,7 +150,7 @@
                         <td>(服務)轉介信箱管理</td>
                         <td>
                             <ul>
-                                <li>轉介信箱管理 <a href="tpmlwebref_referrals.htm" target="_blank"></a></li>
+                                <li>轉介信箱管理<a href="tpmlwebref_referrals.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
@@ -159,7 +159,7 @@
                         <td>(服務)問題審核管理</td>
                         <td>
                             <ul>
-                                <li>問題審核管理 <a href="tpmlwebref_review.htm" target="_blank"></a></li>
+                                <li>問題審核管理<a href="tpmlwebref_review.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
