--- a/tpmlwebref_emailtemplate.htm
+++ b/tpmlwebref_emailtemplate.htm
@@ -225,7 +225,7 @@
                                     <div class="quick_btn">
                                         <button class="btn btn-orange"
                                             onclick="window.location.href='tpmlwebref_emailtemplateedit.htm';"><i
-                                                class="i_add"></i>新增公版信</button>
+                                                class="i_add"></i>新增公版</button>
                                     </div>
                                 </div>
                                 <div class="_content">
