--- a/tpmlwebref_chat_customer_add2.htm
+++ b/tpmlwebref_chat_customer_add2.htm
@@ -91,7 +91,7 @@
                         </a>
                         <ul>
                             <li><a href="tpmlwebref_questionsearch.htm"><span>(服務)讀者問題回覆管理</span></a></li>
-                            <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版信件管理</span></a></li>
+                            <li><a href="tpmlwebref_emailtemplate.htm"><span>(服務)公版回覆管理</span></a></li>
                             <li><a href="tpmlwebref_referrals.htm"><span>(服務)轉介信箱管理</span></a></li>
                             <li><a href="tpmlwebref_review.htm"><span>(服務)問題審核管理</span></a></li>
                             <li><a href="tpmlwebref_chat_customer.htm"><span>(服務)客服管理</span></a></li>
@@ -183,6 +183,12 @@
                                 </div>
                                 <div class="_head">
                                     <div class="tag">
+                                        狀態：
+                                        <ul>
+                                            <li class="active"><a href=" #">全部</a></li>
+                                            <li><a href="#">已處理</a></li>
+                                            <li><a href="#">未處理</a></li>
+                                        </ul>
                                     </div>
                                     <div class="control_panel">
                                         <div class="dropdown">
@@ -235,6 +241,7 @@
                                                         <a href="#"><i class="i_sort"></i>
                                                         </a>
                                                     </th>
+                                                    <th>狀態</th>
                                                     <th>IP</th>
                                                     <th>回到情境</th>
                                                 </tr>
@@ -247,6 +254,7 @@
                                                     <td data-title=""><a href="tpmlwebref_chatmessage_1.htm"
                                                             title="檢視留言資料">青鳥行動助攻拆樑行動</a>
                                                     </td>
+                                                    <td><span class="green">已處理</span></td>
                                                     <td>192.168.100.70</td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -262,6 +270,7 @@
                                                     <td data-title=""><a href="tpmlwebref_chatmessage_1.htm"
                                                             title="檢視留言資料">16所大學網激動：看到學校上榜好感動</a>
                                                     </td>
+                                                    <td><span class="green">已處理</span></td>
                                                     <td>192.168.100.70</td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -277,6 +286,7 @@
                                                     <td data-title=""><a href="tpmlwebref_chatmessage_1.htm"
                                                             title="檢視留言資料">圖書館館藏沒有我要的書怎麼辦</a>
                                                     </td>
+                                                    <td><span class="green">已處理</span></td>
                                                     <td>192.168.100.70</td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -292,6 +302,7 @@
                                                     <td data-title=""><a href="tpmlwebref_chatmessage_1.htm"
                                                             title="檢視留言資料">建築大師隈研吾超壯觀書牆 </a>
                                                     </td>
+                                                    <td><span class="green">已處理</span></td>
                                                     <td>192.168.100.70</td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -307,6 +318,7 @@
                                                     <td data-title=""><a href="tpmlwebref_chatmessage_1.htm"
                                                             title="檢視留言資料">黃仁勳掀AI浪潮 </a>
                                                     </td>
+                                                    <td><span class="green">已處理</span></td>
                                                     <td>192.168.100.70</td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -322,6 +334,7 @@
                                                     <td data-title=""><a href="tpmlwebref_chatmessage_1.htm"
                                                             title="檢視留言資料">眾黨台中主：綠白可合</a>
                                                     </td>
+                                                    <td><span class="red">未處理</span></td>
                                                     <td>192.168.100.70</td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -337,6 +350,7 @@
                                                     <td data-title=""><a href="tpmlwebref_chatmessage_1.htm"
                                                             title="檢視留言資料">館內是否有提供圖書影印服務？</a>
                                                     </td>
+                                                    <td><span class="red">未處理</span></td>
                                                     <td>192.168.100.70</td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -352,6 +366,7 @@
                                                     <td data-title=""><a href="tpmlwebref_chatmessage_1.htm"
                                                             title="檢視留言資料">館內是否有免費無限上網及插座電源充電服務？</a>
                                                     </td>
+                                                    <td><span class="red">未處理</span></td>
                                                     <td>192.168.100.70</td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -367,6 +382,7 @@
                                                     <td data-title=""><a href="tpmlwebref_chatmessage_1.htm"
                                                             title="檢視留言資料">外國人可否辦理借書證？</a>
                                                     </td>
+                                                    <td><span class="red">未處理</span></td>
                                                     <td>192.168.100.70</td>
                                                     <td>
                                                         <div class="btn_grp">
@@ -382,6 +398,7 @@
                                                     <td data-title=""><a href="tpmlwebref_chatmessage_1.htm"
                                                             title="檢視留言資料">館內是否有觀光旅遊等相關資訊？</a>
                                                     </td>
+                                                    <td><span class="red">未處理</span></td>
                                                     <td>192.168.100.70</td>
                                                     <td>
                                                         <div class="btn_grp">
